# Blinking-Drone-Algorithm

./: .gitignore  README.md  pyproject.toml
.github/workflows/: mypy.yml  pytest.yml
fixtures/: unzip.py
src/: csv_load.py  main_alg.py
src/blinking_drone_alg/: constants.py  drone_parser.py  droneshow.py  droneshow_serializer.py  main_alg.py  math_utils.py  mixins.py
src/blinking_drone_algorithm.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_distCalc.py  test_distance.py  test_drone_parsing.py  test_droneshow.py  test_droneshow_load.py  test_hungAlg.py  test_main.py  test_mixins.py  test_something.py
tests/fixtures/: demo_single_drone.csv  unzip.py
